# lyapax

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: collect_results.py  report_plots.py  report_tables.py  results.json
benchmarks/chaostools/: _common.jl  linear_ode.jl  lorenz.jl  maps.jl  network.jl  network_scaling.jl  rossler.jl
benchmarks/jitcdde/: _common.py  linear_scalar.py  mackey_glass.py
benchmarks/jitcode/: _common.py  linear_ode.py  lorenz.py  network.py  network_scaling.py  rossler.py
benchmarks/lyapax/: _common.py  linear_ode.py  linear_scalar_dde.py  lorenz.py  mackey_glass.py  maps.py  network.py  network_scaling.py  rossler.py
docs/: Makefile  api.rst  conf.py  index.rst
docs/_templates/: base.html
docs/background/: benchmarks.md  capabilities.md  jax_performance.md  lyapax_implementation.md  lyapunov_exponents.md  motivation.md  validation.md
examples/: 00_time_series_sanity_check.py  01_linear_ode.py  01b_custom_system.py  02_chaotic_maps.py  03_chaotic_flows.py  04_linear_network.py  05_kuramoto_sync.py  06_custom_coupling.py  07_speed_and_accuracy.py  08_delayed_coupling.py  09_kuramoto_delayed_network.py  10_matrix_free_scaling.py  11_vmap_parameter_sweep.py  12_public_api_overview.py  13_dde_history_interpolation.py  14_gpu_acceleration.py  15_adaptive_ode.py  16_convergence_drift.py  17_dde_resume.py  18_differentiate_lyapunov_exponent.py  19_kaplan_yorke_dimension.py  README.txt  plot_00_time_series_sanity_check.py  plot_01_linear_ode.py  plot_03_chaotic_flows.py  plot_04_linear_network.py  plot_05_kuramoto_sync.py  plot_06_custom_coupling.py  plot_07_speed_and_accuracy.py  plot_08_delayed_coupling.py  plot_09_kuramoto_delayed_network.py  plot_10_matrix_free_scaling.py  plot_11_vmap_parameter_sweep.py  plot_12_public_api_overview.py  plot_13_dde_history_interpolation.py  plot_14_gpu_acceleration.py
joss/: paper.bib  paper.md  run.sh
notes/: adaptive_speed_investigation.md  api_design_review.md  benchmark_report.md  documentation_milestone.md  joss_pre_submission_review.md  milestones.md  open_issues.md  package_review.md  possible_solution_to_open_issues.md  stepping_accuracy_review.md  validation_systems.md
notes/slides/: .gitignore  linkedin_post.txt  lyapax_intro_slides.tex
src/lyapax/: __init__.py  adaptive.py  core.py  coupling.py  dde.py  integrators.py  network.py  sweep.py  systems.py  utils.py
src/lyapax/simulator/: NOTICE.md  __init__.py  coupling.py  model_spec.py  step.py
tests/: conftest.py  test_adaptive_diffrax.py  test_adaptive_ode.py  test_dde.py  test_dde_interpolation.py  test_delayed_networks.py  test_differentiability.py  test_gpu.py  test_integrators.py  test_kaplan_yorke.py  test_lyapunov_core.py  test_network.py  test_ring_buffer_time_convention.py  test_setup.py  test_sweep.py
