[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyapax"
version = "0.0.1"
description = "JAX-native Lyapunov exponent computation for ODEs and DDEs."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abolfazl Ziaeemehr", email = "a.ziaeemehr@gmail.com" },
]
readme = "README.md"

# Verified against jax==0.10.2 in the local dev environment (lyapax venv).
# CI/dev defaults to CPU (see tests/conftest.py); GPU is opt-in and
# verified working as of M6 -- see notes/milestones.md and tests/test_gpu.py.
dependencies = [
    "jax>=0.10",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "scipy>=1.10",
]
examples = [
    "matplotlib>=3.7",
]
# Only for reproducing notes/benchmark_report.md's cross-tool comparison
# (benchmarks/jitcode/, benchmarks/jitcdde/) -- not needed for lyapax itself
# or for running the test suite. ChaosTools.jl is a separate Julia install,
# see the report's Environment table.
benchmark = [
    "jitcode>=1.7",
    "jitcdde>=1.8",
    "sympy>=1.13",  # jitcode/jitcdde's f_lyap simplify step needs it even on the compiled-C path
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["lyapunov-master"]

[tool.ruff.lint]
select = ["E", "F", "I"]
