[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyapax"
dynamic = ["version"]
description = "JAX-native Lyapunov exponent computation for ODEs and DDEs."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Abolfazl Ziaeemehr", email = "a.ziaeemehr@gmail.com" },
]
readme = "README.md"
keywords = [
    "jax",
    "dynamical systems",
    "lyapunov exponents",
    "chaos",
    "delay differential equations",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

# Verified against jax==0.10.2 in the local dev environment (lyapax venv).
# CI/dev defaults to CPU (see tests/conftest.py); GPU is opt-in and
# verified working as of M6 -- see notes/milestones.md and tests/test_gpu.py.
dependencies = [
    "jax>=0.10",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "scipy>=1.10",
]
examples = [
    "matplotlib>=3.7",
]
docs = [
    "sphinx>=7",
    "sphinx-gallery>=0.15",
    "sphinx-book-theme>=1.1",
    "matplotlib>=3.7",
    "myst-parser>=2.0",
]
# Only for reproducing notes/benchmark_report.md's cross-tool comparison
# (benchmarks/jitcode/, benchmarks/jitcdde/) -- not needed for lyapax itself
# or for running the test suite. ChaosTools.jl is a separate Julia install,
# see the report's Environment table.
benchmark = [
    "jitcode>=1.7",
    "jitcdde>=1.8",
    "sympy>=1.13",  # jitcode/jitcdde's f_lyap simplify step needs it even on the compiled-C path
]

[project.urls]
Homepage = "https://github.com/Ziaeemehr/lyapax"
Documentation = "https://lyapax.readthedocs.io"
Repository = "https://github.com/Ziaeemehr/lyapax"
Issues = "https://github.com/Ziaeemehr/lyapax/issues"
Changelog = "https://github.com/Ziaeemehr/lyapax/blob/main/CHANGELOG.md"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "lyapax.__version__.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["lyapunov-master"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# examples/*.py deliberately set os.environ["JAX_PLATFORM_NAME"] before
# importing jax, so the jax import can't be at the top of the file.
"examples/*.py" = ["E402"]
