[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyapax"
dynamic = ["version"]
description = "JAX-native Lyapunov exponent computation for ODEs and DDEs."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Abolfazl Ziaeemehr", email = "a.ziaeemehr@gmail.com" },
]
readme = "README.md"
keywords = [
    "jax",
    "dynamical systems",
    "lyapunov exponents",
    "chaos",
    "delay differential equations",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

# Verified against jax==0.10.2 in the local dev environment (lyapax venv).
# CI/dev defaults to CPU (see tests/conftest.py); GPU is opt-in -- see
# tests/test_gpu.py.
dependencies = [
    "jax>=0.10",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "scipy>=1.10",
]
examples = [
    "matplotlib>=3.7",
]
# Adaptive-step ODE integration -- ODE-only,
# diffrax has no DDE support (patrick-kidger/diffrax#406). Verified against
# diffrax==0.7.2 in the lyapax dev env (jax==0.10.2 already installed
# satisfies diffrax's jax>=0.4.38 floor). equinox is a diffrax dependency
# already, but lyapax.adaptive imports it directly (equinox.error_if), so
# it's listed explicitly rather than relied on transitively.
adaptive = [
    "diffrax>=0.7.2",
    "equinox>=0.11",
]
docs = [
    "sphinx>=7",
    "sphinx-gallery>=0.15",
    "sphinx-book-theme>=1.1",
    "matplotlib>=3.7",
    "myst-parser>=2.0",
]
# Only for reproducing docs/background/benchmarks.md's cross-tool comparison
# (benchmarks/jitcode/, benchmarks/jitcdde/) -- not needed for lyapax itself
# or for running the test suite. ChaosTools.jl is a separate Julia install,
# see benchmarks/collect_results.py's module docstring for the Environment
# requirements.
benchmark = [
    "jitcode>=1.7",
    "jitcdde>=1.8",
    "sympy>=1.13",  # jitcode/jitcdde's f_lyap simplify step needs it even on the compiled-C path
]

[project.urls]
Homepage = "https://github.com/Ziaeemehr/lyapax"
Documentation = "https://lyapax.readthedocs.io"
Repository = "https://github.com/Ziaeemehr/lyapax"
Issues = "https://github.com/Ziaeemehr/lyapax/issues"
Changelog = "https://github.com/Ziaeemehr/lyapax/blob/main/CHANGELOG.md"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "lyapax.__version__.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = ["lyapunov-master"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# examples/*.py deliberately set os.environ["JAX_PLATFORMS"] before
# importing jax, so the jax import can't be at the top of the file.
"examples/*.py" = ["E402"]
